--- a/Front/src/app/shared/components/attack-label/attack-label.component.html
+++ b/Front/src/app/shared/components/attack-label/attack-label.component.html
@@ -1,14 +1,15 @@
 <div
   [style]="{
-    borderColor: colors[attackData.type],
-    color : colors[attackData.type],
+    borderColor: colors[attack.type],
+    color : colors[attack.type],
     display: 'flex',
     justifyContent: 'space-between'
   }">
   <div style="border: none; border-radius: 0; width: 8rem; min-width: 8rem; max-width: 8rem; text-overflow: ellipsis; border-right: 1px solid #fff5">
-    {{ attackData.name }}
+    {{ attack.name }}
   </div>
-  <div style="border: none;font-weight: 500; padding-left: 1rem;">
-    {{ attackData.power }}
+  <div style="border: none;font-weight: 500; padding-left: 1rem; display: flex; flex-direction: row; justify-content: space-evenly; width: 6rem;">
+    <b style="font-weight: 700;">{{ attack.power }}p</b>
+    {{ hitChanceInPercent }}%
   </div>
 </div>
