--- a/Front/src/app/attack-list/attack-list.component.html
+++ b/Front/src/app/attack-list/attack-list.component.html
@@ -7,7 +7,7 @@
         Ataki
         <dx-button
           *ngIf="user.isProfessor()"
-          (click)="router.navigate(['/pokedex/new'])"
+          (click)="router.navigate(['/pokedex/attacks/new'])"
           class="modify-button"
           text="Dodaj nowy atak"
           icon="add"
@@ -24,7 +24,7 @@
         searchMode="contains"
       >
         <div *dxTemplate="let item of 'item'">
-          <app-attack-label [name]="item.name"></app-attack-label>
+          <app-attack-label [attack]="item"></app-attack-label>
         </div>
       </dx-list>
     </dx-scroll-view>
