--- a/Front/src/app/new/new-attack-form/new-attack-form.component.html
+++ b/Front/src/app/new/new-attack-form/new-attack-form.component.html
@@ -28,7 +28,7 @@
 
         <dxi-item
           [colSpan]="1"
-          dataField="type"
+          dataField="type_"
           editorType="dxSelectBox"
           [editorOptions]="{
             dataSource: types
@@ -47,7 +47,7 @@
           dataField="power"
           editorType="dxNumberBox"
           [editorOptions]="{
-            format: '0'
+            format: '#'
           }"
           >
           <dxo-label text="Moc ataku"></dxo-label>
