--- a/Front/src/app/shared/components/attack-label/attack-label.component.html
+++ b/Front/src/app/shared/components/attack-label/attack-label.component.html
@@ -1,7 +1,7 @@
 <div
   [style]="{
-    borderColor: colors[attack.type],
-    color : colors[attack.type],
+    borderColor: colors[attack.type_],
+    color : colors[attack.type_],
     display: 'flex',
     justifyContent: 'space-between'
   }">
