--- a/Front/src/app/shared/components/login-form/login-form.component.html
+++ b/Front/src/app/shared/components/login-form/login-form.component.html
@@ -17,6 +17,10 @@
       <dxo-button-options width="100%" type="default" [useSubmitBehavior]="true" [template]="'signInTemplate'">
       </dxo-button-options>
     </dxi-item>
+
+    <dxi-item itemType="button">
+      <dxo-button-options text="Stwórz konto" width="100%" [onClick]="onCreateAccountClick"></dxo-button-options>
+    </dxi-item>
     
     <ng-container *dxTemplate="let item of 'signInTemplate'">
       <div>
