--- a/Front/src/app/edit/edit-type-form/edit-type-form.component.html
+++ b/Front/src/app/edit/edit-type-form/edit-type-form.component.html
@@ -1,7 +1,8 @@
 <img class="background" src="/assets/backgrounds/city.webp">
+
 <div class="main-container">
   <div class="main">
-    <h1 class="title">Dodaj nowy typ</h1>
+    <h1 class="title">Edytuj typ</h1>
     <div class="form-container">
 
       <form (submit)="onFormSubmit($event)">
@@ -12,7 +13,7 @@
         style="width: 30rem;"
         [showValidationSummary]="true"
         validationGroup="typeData"
-        >
+      >
         <dxi-item
             dataField="name"
             editorType="dxTextBox"
@@ -25,60 +26,24 @@
                 >
             </dxi-validation-rule>
         </dxi-item>
-
-        <dxi-item itemType="group" [colSpan]="3" [colCount]="3">
-            <dxi-item 
-                [colSpan]="1"
-                dataField="worse"
-                editorType="dxTagBox"
-                [editorOptions]="{
-                    dataSource: allTypes,
-                    displayExpr: 'name',
-                    valueExpr: 'name'
-                }"
-                >
-                <dxo-label text="Typy kontrowane"></dxo-label>
-            </dxi-item>
-            <dxi-item [colSpan]="1" itemType="simple" style="font-size: 1.6rem; display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
-                <div>
-                  <
-                </div>
-                <div>
-                    {{formData.name}} 
-                </div>
-                <div>
-                  <
-                </div>
-            </dxi-item>
-            <dxi-item 
-                [colSpan]="1"
-                dataField="better"
-                editorType="dxTagBox"
-                [editorOptions]="{
-                    dataSource: allTypes,
-                    displayExpr: 'name',
-                    valueExpr: 'name'
-                }"
-                >
-                <dxo-label text="Typy kontrujące"></dxo-label>
-                <dxi-validation-rule
-                    type="compare"
-                    comparisonType="!="
-                    [ignoreEmptyValue]="true"
-                    message="Typ nie może być kontrowanym i kontrować nowy typ jednocześnie"
-                    [comparisonTarget]="checkTypesOverlapping"
-                >
-              </dxi-validation-rule>
-            </dxi-item>
-        </dxi-item>
         
         <dxi-item
           [colSpan]="2"
           itemType="button"
           [buttonOptions]="{
-            text: 'Dodaj nowy typ',
+            text: 'Edytuj typ',
             useSubmitBehavior: true,
             type: 'success'
+          }"
+        >
+        </dxi-item>
+        <dxi-item
+          [colSpan]="2"
+          itemType="button"
+          [buttonOptions]="{
+            text: 'Usuń typ',
+            onClick: deleteType,
+            type: 'danger'
           }"
         >
         </dxi-item>
@@ -86,4 +51,4 @@
       </form>
     </div>
   </div>
-</div> -->
+</div>
