--- a/Front/src/app/new/new-pokeball-entry-form/new-pokeball-entry-form.component.html
+++ b/Front/src/app/new/new-pokeball-entry-form/new-pokeball-entry-form.component.html
@@ -1,1 +1,43 @@
-<p>new-pokeball-entry-form works!</p>
+<img class="background" src="/assets/backgrounds/city.webp">
+
+<div class="main-container">
+  <div class="main">
+    <h1 class="title">Dodaj nowy Pokeball</h1>
+    <div class="form-container">
+      <form (submit)="onFormSubmit($event)">
+      <dx-form
+        id="newPokeballEntryForm"
+        [colCount]="3"
+        [formData]="formData"
+        style="width: 30rem;"
+        [showValidationSummary]="true"
+        validationGroup="pokeballData"
+      >
+        <dxi-item
+            dataField="name"
+            editorType="dxTextBox"
+            [colSpan]="3"
+            >
+            <dxo-label text="Nazwa Pokeballa"></dxo-label>
+            <dxi-validation-rule
+                type="required"
+                message="Podaj nazwe dodawanego typu"
+                >
+            </dxi-validation-rule>
+        </dxi-item>
+        
+        <dxi-item
+          [colSpan]="2"
+          itemType="button"
+          [buttonOptions]="{
+            text: 'Dodaj nowy Pokeball',
+            useSubmitBehavior: true,
+            type: 'success'
+          }"
+        >
+        </dxi-item>
+      </dx-form>
+      </form>
+    </div>
+  </div>
+</div>
