--- a/Front/src/app/new/new-pokeball-entry-form/new-pokeball-entry-form.component.scss
+++ b/Front/src/app/new/new-pokeball-entry-form/new-pokeball-entry-form.component.scss
@@ -1,1 +1,9 @@
 @import "../../shared/shared";
+
+.form-container {
+  width: 100%;
+  height: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
