--- a/Front/src/app/shared/components/header/header.component.scss
+++ b/Front/src/app/shared/components/header/header.component.scss
@@ -19,23 +19,47 @@
   }
 }
 
-::ng-deep .dx-toolbar .dx-toolbar-item.menu-button {
-  width: $side-panel-min-width;
-  text-align: center;
-  padding: 0;
-}
-
-::ng-deep .header-title .dx-item-content {
-  padding: 0;
-  margin: 0;
-}
+::ng-deep .header-title {
+  .dx-item-content {
+    margin: 0;
+  }
+} 
 
 :host-context(.dx-theme-generic) {
-  .dx-toolbar {
-    padding: 10px 0;
-  }
-
   .user-button>.dx-button-content {
     padding: 3px;
+  }
+}
+
+button {
+  width: 100%;
+  min-width: 100%;
+  height: 100%;
+  min-height: 100%;
+  border: none;
+  border-radius: none;
+  background-color: transparent;
+  color: white;
+  font-size: 1.4rem;
+  font-weight: 500;
+  padding: .2rem 2rem !important;
+
+}
+
+:host ::ng-deep .home {
+  background-color: rgb(134, 0, 0);
+  padding-left: 1rem;
+  &:hover {
+    background-color: red;
+    transition: ease-in-out .1s;
+  }
+}
+
+:host ::ng-deep .entry {
+  background-color: #f000;
+  transition: ease-in-out .2s;
+  &:hover {
+    background-color: #f00;
+    transition: ease-in-out .2s;
   }
 }
