--- a/Front/src/app/owned-pokemon-entry/owned-pokemon-entry.component.html
+++ b/Front/src/app/owned-pokemon-entry/owned-pokemon-entry.component.html
@@ -19,7 +19,7 @@
         <div class="info-container">
           <div class="entry">
             <div class="label">Gatunek Pokémona</div>
-            <div class="value">{{pokemonData.pokedex_num}} - {{pokedexData?.name}}</div>
+            <div class="value">{{pokemonData.pokedex_num}} - {{pokedexData.name}}</div>
           </div>
 
           <div class="entry">
@@ -32,7 +32,7 @@
             <div class="value">
               <div style="display: flex; flex-direction: row">
                 <app-type-label [type]="pokedexData.primary_type"></app-type-label>
-                <app-type-label *ngIf="pokedexData.secondary_type" [type]="pokedexData.secondary_type!"></app-type-label>
+                <app-type-label *ngIf="pokedexData.secondary_type" [type]="pokedexData.secondary_type"></app-type-label>
               </div>
             </div>
           </div>
