--- a/Front/src/app/shared/components/type-label/type-label.component.html
+++ b/Front/src/app/shared/components/type-label/type-label.component.html
@@ -1,3 +1,3 @@
-<div [style]="{borderColor: colors[type], color : colors[type]}">
+<div *ngIf="type !== null" [style]="{borderColor: colors[type], color : colors[type]}">
   {{ type }}
 </div>
