--- a/Front/src/app/edit/edit-pokedex-entry-form/edit-pokedex-entry-form.component.html
+++ b/Front/src/app/edit/edit-pokedex-entry-form/edit-pokedex-entry-form.component.html
@@ -161,6 +161,17 @@
           [colSpan]="2"
           itemType="button"
           [buttonOptions]="{
+            text: 'Usuń gatunek',
+            onClick: deletePokedex,
+            type: 'danger'
+          }"
+        >
+        </dxi-item>
+
+        <dxi-item
+          [colSpan]="2"
+          itemType="button"
+          [buttonOptions]="{
             text: 'Edytuj gatunek',
             useSubmitBehavior: true,
             type: 'success'
