--- a/Front/src/app/shared/components/attack-label/attack-label.component.html
+++ b/Front/src/app/shared/components/attack-label/attack-label.component.html
@@ -3,7 +3,8 @@
     borderColor: colors[attack.type_],
     color : colors[attack.type_],
     display: 'flex',
-    justifyContent: 'space-between'
+    justifyContent: 'space-between',
+    margin: '.2rem'
   }">
   <div style="border: none; border-radius: 0; width: 8rem; min-width: 8rem; max-width: 8rem; text-overflow: ellipsis; border-right: 1px solid #fff5">
     {{ attack.name }}
