--- a/Front/src/app/new/new-pokemon-entry-form/new-pokemon-entry-form.component.html
+++ b/Front/src/app/new/new-pokemon-entry-form/new-pokemon-entry-form.component.html
@@ -106,7 +106,9 @@
           [editorOptions]="{
             dataSource: allPossibleAttacks,
             displayExpr : 'name',
-            valueExpr : 'name'
+            valueExpr : 'name',
+            showSelectionControls : true,
+            applyValueMode: 'useButtons'
           }"
           >
           <dxo-label text="Ataki jakie zna"></dxo-label>
